add in gordon stuff

--- a/iframe.html
+++ b/iframe.html
@@ -1,3 +1,4 @@
+<!--
 <html>
 <body>
 <h1 style="width:100%;"> HELLO WORLD </h1>
@@ -8,4 +9,22 @@ document.getElementById("button").addEventListener("click", function() {
     }, false);
 </script>
 </body>
+</html>
+-->
+
+<html>
+  <head>
+    <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
+    <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="firebase_test.css">
+  </head>
+  <body>
+    <script type="text/javascript" src="firebase_test.js">
+    </script>
+    <div class="banner">
+      <input type="range" tabIndex="-1"></input>
+      <button id="login-btn" class="button">Sign in with Twitter</button>
+    </div>
+  </body>
 </html>
