--- a/iframe.html
+++ b/iframe.html
@@ -1,26 +1,12 @@
-<!--
-<html>
-<body>
-<h1 style="width:100%;"> HELLO WORLD </h1>
-<button id="button">Click me!</button>
-<script>
-document.getElementById("button").addEventListener("click", function() {
-    top.postMessage("clicked!", "*");
-    }, false);
-</script>
-</body>
-</html>
--->
-
 <html>
   <head>
     <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="firebase_test.css">
+    <link rel="stylesheet" type="text/css" href="pagerate.css">
   </head>
   <body>
-    <script type="text/javascript" src="firebase_test.js">
+    <script type="text/javascript" src="pagerate.js">
     </script>
     <div class="banner">
       <input type="range" tabIndex="-1"></input>
