add in auth iframe

--- a/auth.html
+++ b/auth.html
@@ -12,6 +12,6 @@
       <input type="range" tabIndex="-1"></input>
       <button id="login-btn" class="button">Sign in with Twitter</button>
     </div>
-    <iframe id="authFrame" src="http://git.tedtomlinson.com/pagerate/auth.html"></iframe>
+    <iframe src="http://git.tedtomlinson.com/pagerate/iframe.html"></iframe>
   </body>
 </html>
