--- a/auth.html
+++ b/auth.html
@@ -3,15 +3,8 @@
     <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="pagerate.css">
   </head>
   <body>
-    <script type="text/javascript" src="pagerate.js">
-    </script>
-    <div class="banner">
-      <input type="range" tabIndex="-1"></input>
-      <button id="login-btn" class="button">Sign in with Twitter</button>
-    </div>
-    <iframe src="http://git.tedtomlinson.com/pagerate/iframe.html"></iframe>
+    <script type="text/javascript" src="auth.js"> </script>
   </body>
 </html>
