add in firebase code

--- a/iframe.html
+++ b/iframe.html
@@ -11,6 +11,7 @@
     <div class="banner">
       <input type="range" tabIndex="-1"></input>
       <button id="login-btn" class="button">Sign in with Twitter</button>
+      <button id="hide-btn" class="button">Hide</button>
     </div>
     <iframe id="authFrame" src="http://git.tedtomlinson.com/pagerate/auth.html"></iframe>
   </body>
