add some access control to maintain sum

--- a/iframe.html
+++ b/iframe.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="pagerate.js">
     </script>
     <div class="banner">
-      <input type="range" tabIndex="-1"></input>
+      <input id="rate-input" type="range" tabIndex="-1"></input>
       <button id="login-btn" class="button">Sign in with Twitter</button>
       <button id="hide-btn" class="button">Hide</button>
       <button id="rate-btn" class="button">Rate</button>
