Test auth changes

--- a/auth.html
+++ b/auth.html
@@ -2,9 +2,8 @@
   <head>
     <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </head>
-  <body>
-    <script type="text/javascript" src="auth.js"> </script>
+  <body class="hidden">
+    <script type="text/javascript" src="auth.js"></script>
   </body>
 </html>
