--- a/auth.html
+++ b/auth.html
@@ -3,7 +3,7 @@
     <script type='text/javascript' src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script type="text/javascript" src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
   </head>
-  <body class="hidden">
+  <body>
     <script type="text/javascript" src="auth.js"></script>
   </body>
 </html>
