Cleanup and animations

--- a/iframe.html
+++ b/iframe.html
@@ -10,15 +10,15 @@
     <script type="text/javascript" src="pagerate.js">
     </script>
     <div class="banner">
+      <div class="hide-button">&#10006;</div>
       <div class="slider">
         <input class="slider-input" type="range" value="100" tabIndex="-1"></input>
       </div>
       <div class="text">
-        <div class="login hidden">Sign in with Twitter</div>
+        <div class="login hidden">Login</div>
         <div class="current-value hidden">Drag me!</div>
         <div class="average-value hidden"></div>
       </div>
-      <!-- <button id="hide-btn" class="button">Hide</button> -->
     </div>
     <iframe id="authFrame" src="http://git.tedtomlinson.com/pagerate/auth.html"></iframe>
   </body>
